src/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
         rewrite /mongo http://mongo.localhost;
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix #ou Exec
          path: "/mongo"
          backend:
            service:
              name: mongo-express
              port: 
                number: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dominio-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: mongo.localhost
      http:
        paths:
        - pathType: Prefix #ou Exec
          path: /
          backend:
            service:
              name: mongo-express
              port: 
                number: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: padrao-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: web
      port:
        number: 5000
